--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "ethers": "^5.0.26",
     "ganache-time-traveler": "^1.0.15",
     "hardhat-gas-reporter": "^1.0.4",
+    "hardhat-prettier": "0.0.1",
+    "prettier": "^2.3.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.13",
     "solidity-coverage": "^0.7.16",
     "truffle-assertions": "^0.9.2",
     "truffle-contract-size": "^2.0.1",
